# AI_agent_demo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
demos/: api_test.ipynb  chapter1_demo.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb  llm诗词.txt
demos/knowledge_base/: test.txt
notes/: Day01.md  Day02.md  Day03.md  Day04.md  Day05.md  Day06.md
